@@ -1,6 +1,11 @@
 2008-10-08  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/NRefactoryResolver.cs:
+	* Gui/CSharpTextEditorCompletion.cs: fixed regression bug.
+
+2008-10-08  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/NRefactoryResolver.cs:
 	* Gui/NewCSharpExpressionFinder.cs:
 	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 432681 - Incorrect
 	completion in nested classes'.
